--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-matplotlib
-numpy
-opencv-python
-pandas
-scikit-image
-scipy
-numpy
-opencv-python
-PyQt5
-flask
+Flask==3.0.3
+Pillow==10.4.0
+requests==2.32.3
+numpy==1.26.4
+opencv-python==4.10.0.84
+matplotlib==3.9.2
+pandas==2.2.3
+scikit-image==0.24.0
+scipy==1.14.1
